<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/surface">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/round_corners"
				android:padding="20dp">


				<TextView
					android:id="@+id/title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:gravity="center"
					android:text="@string/hotel_title"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<androidx.viewpager2.widget.ViewPager2
					android:id="@+id/hotel_images_vp"
					android:layout_width="match_parent"
					android:layout_height="260dp"
					android:layout_marginVertical="15dp"
					app:layout_constraintTop_toBottomOf="@id/title" />


				<com.google.android.material.tabs.TabLayout
					android:id="@+id/vp_pages"
					android:layout_width="75dp"
					android:layout_height="20dp"
					android:layout_marginBottom="15dp"
					android:orientation="horizontal"
					app:layout_constraintBottom_toBottomOf="@id/hotel_images_vp"
					app:layout_constraintEnd_toEndOf="@id/hotel_images_vp"
					app:layout_constraintStart_toStartOf="@id/hotel_images_vp"
					app:tabBackground="@drawable/tab_indicator_default"
					app:tabIndicator="@drawable/tab_indicator_selected"
					app:tabIndicatorColor="@color/white"
					app:tabIndicatorGravity="center"
					app:tabIndicatorHeight="8dp" />


				<LinearLayout
					android:id="@+id/rating_layout"
					android:layout_width="wrap_content"
					android:layout_height="30dp"
					android:layout_marginTop="15dp"

					android:gravity="center_vertical"
					android:orientation="horizontal"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/hotel_images_vp">

					<ImageView
						android:layout_width="15dp"
						android:layout_height="15dp"
						android:src="@drawable/ic_star" />

					<TextView
						android:id="@+id/hotel_rating"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginHorizontal="5dp"
						android:maxEms="1"
						tools:text="5" />

					<TextView
						android:id="@+id/hotel_rating_name"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						tools:text="Превосходно!" />

				</LinearLayout>


				<TextView
					android:id="@+id/hotel_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/rating_layout"
					tools:text="Steigenberger Makadi" />

				<TextView
					android:id="@+id/hotel_address"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@id/hotel_name"
					tools:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет" />

				<LinearLayout
					android:id="@+id/price_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dp"
					android:orientation="horizontal"
					app:layout_constraintTop_toBottomOf="@id/hotel_address">

					<TextView
						android:id="@+id/minimal_price"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						tools:text="от 134 673 ₽" />

					<TextView
						android:id="@+id/price_for_it"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_gravity="end"
						android:layout_weight="1"
						tools:text="Steigenberger Makadi" />
				</LinearLayout>
			</androidx.constraintlayout.widget.ConstraintLayout>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="3dp"
				android:background="@drawable/round_corners"
				android:padding="20dp">

				<TextView
					android:id="@+id/about_hotel"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					android:text="@string/about_hotel"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<com.google.android.material.chip.ChipGroup
					android:id="@+id/chips_peculiarities"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginVertical="15dp"
					app:layout_constraintTop_toBottomOf="@id/about_hotel" />

				<TextView
					android:id="@+id/hotel_description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20dp"
					app:layout_constraintTop_toBottomOf="@id/chips_peculiarities"
					tools:text="Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!" />


				<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/hotel_bars"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="15dp"
					android:background="@drawable/round_corners"
					android:backgroundTint="@color/surface"
					android:padding="15dp"
					app:layout_constraintTop_toBottomOf="@id/hotel_description">

					<ImageView
						android:id="@+id/conveniences_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:scaleType="center"
						android:src="@drawable/ic_happy"
						app:layout_constraintBottom_toBottomOf="@id/conveniences_subtitle"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="@id/conveniences_title" />

					<TextView
						android:id="@+id/conveniences_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="15dp"
						android:text="@string/conveniences_title"
						app:layout_constraintBottom_toTopOf="@id/conveniences_subtitle"
						app:layout_constraintStart_toEndOf="@id/conveniences_image"
						app:layout_constraintTop_toTopOf="parent" />

					<TextView
						android:id="@+id/conveniences_subtitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/hotel_bars_subtitle"
						app:layout_constraintStart_toStartOf="@id/conveniences_title"
						app:layout_constraintTop_toBottomOf="@id/conveniences_title" />

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_arrow"
						app:layout_constraintBottom_toBottomOf="@id/conveniences_subtitle"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="@id/conveniences_title" />

					<View
						android:id="@+id/divider_inclusive"
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:layout_marginHorizontal="40dp"
						android:layout_marginVertical="10dp"
						android:background="@color/light_grey"
						app:layout_constraintBottom_toTopOf="@id/inclusive_title"
						app:layout_constraintTop_toBottomOf="@id/conveniences_subtitle" />

					<ImageView
						android:id="@+id/inclusive_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:scaleType="center"
						android:src="@drawable/ic_ticksquare"
						app:layout_constraintBottom_toBottomOf="@id/inclusive_subtitle"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="@id/inclusive_title" />

					<TextView
						android:id="@+id/inclusive_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="15dp"
						android:text="@string/inclusive_title"
						app:layout_constraintBottom_toTopOf="@id/inclusive_image"
						app:layout_constraintStart_toEndOf="@id/inclusive_image"
						app:layout_constraintTop_toBottomOf="@id/divider_inclusive" />

					<TextView
						android:id="@+id/inclusive_subtitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/hotel_bars_subtitle"
						app:layout_constraintStart_toStartOf="@id/inclusive_title"
						app:layout_constraintTop_toBottomOf="@id/inclusive_title" />

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_arrow"
						app:layout_constraintBottom_toBottomOf="@id/inclusive_subtitle"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="@id/inclusive_title" />

					<View
						android:id="@+id/divider_not_inclusive"
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:layout_marginHorizontal="40dp"
						app:layout_constraintBottom_toTopOf="@id/not_inclusive_title"
						android:layout_marginVertical="10dp"
						android:background="@color/light_grey"
						app:layout_constraintTop_toBottomOf="@id/inclusive_subtitle" />

					<ImageView
						android:id="@+id/not_inclusive_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:scaleType="center"
						android:src="@drawable/ic_closesquare"
						app:layout_constraintTop_toTopOf="@id/not_inclusive_title"
						app:layout_constraintBottom_toBottomOf="@id/not_inclusive_subtitle"
						app:layout_constraintStart_toStartOf="parent" />

					<TextView
						android:id="@+id/not_inclusive_title"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="15dp"
						android:text="@string/not_inclusive_title"
						app:layout_constraintBottom_toTopOf="@id/not_inclusive_subtitle"
						app:layout_constraintStart_toEndOf="@id/not_inclusive_image"
						app:layout_constraintTop_toBottomOf="@id/divider_not_inclusive" />

					<TextView
						android:id="@+id/not_inclusive_subtitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/hotel_bars_subtitle"
						app:layout_constraintStart_toStartOf="@id/not_inclusive_title"
						app:layout_constraintTop_toBottomOf="@id/not_inclusive_title" />

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_arrow"
						app:layout_constraintBottom_toBottomOf="@id/not_inclusive_subtitle"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="@id/not_inclusive_title" />

				</androidx.constraintlayout.widget.ConstraintLayout>

			</androidx.constraintlayout.widget.ConstraintLayout>

		</LinearLayout>
	</ScrollView>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="3dp"
		android:layout_weight="1"
		android:background="@color/white"
		android:padding="10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		tools:visibility="gone">

		<Button
			android:id="@+id/navigateToRooms"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/navigateToRooms"
			app:layout_constraintBottom_toBottomOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>